CHANGES IN VERSION 1.51.12
--------------------------

NEW FEATURES:
- plotChromatogram and highlightChromPeaks functions.
- clean method for Chromatogram classes.

USER VISIBLE CHANGES:
- Change default for ppm parameter in chromPeaks method to 0.
- extractChromatograms supports extraction of multiple rt and mz ranges.
- New parameter missing for extractChromatograms allowing to specify the
  intensity value to be used for rts for which no signal is available within
  the mz range.
- extractChromatograms returns Chromatograms of length equal to the number of
  scans within the specified rt range, even if no signals are measured
  (intensity values are NA).


CHANGES IN VERSION 1.51.11
--------------------------

NEW FEATURES:
- Parameter "filled" for featureValues (issue #157).
- Parameters "rt" and "mz" in chromPeaks method allowing to extract
  chromatographic peaks from the specified ranges (issue #156).

BUG FIXES:
- Fixed possible memory problem in obiwarp (issue #159).
- Update getPeaks to use non-deprecated API (issue #163).


CHANGES IN VERSION 1.51.10
--------------------------

NEW FEATURES:
- filterRt for Chromatogram class (issue #142).
- adjustRtimePeakGroups function (issue #147).
- adjustRtime,XCMSnExp,PeakGroupsParam and do_adjustRtime_peakGroups support
  use of pre-defined matrix to perform alignment (issue #153).
- plotAdjustedRtime to visualize alignment results (issue #141).

USER VISIBLE CHANGES:
- featureDefinitions and featureValues return DataFrame and matrix with rownames
  corresponding to arbitrary feature IDs (issue #148).
- New peakGroupsMatrix slot for PeakGroupsParam class (issue #153).

BUG FIXES:
- Issue #146: ensure adjusted retention times returned by the peakGroups method
  to be in the same order than the raw retention times.


CHANGES IN VERSION 1.51.9
-------------------------

NEW FEATURES:
- fillChromPeaks, dropFilledChromPeaks methods and FillChromPeaksParam class.
- featureValues method.

USER VISIBLE CHANGES: