@@ -10,7 +10,7 @@ importClassesFrom("Biobase", "AnnotatedDataFrame", "Versioned")
 importMethodsFrom("Biobase", "classVersion", "classVersion<-", "phenoData",
                   "phenoData<-", "pData", "rowMedians")
 
-importFrom("graphics", "plot", "image", "boxplot", "matplot", "rect")
+importFrom("graphics", "plot", "image", "boxplot", "matplot", "rect", "axis")
 importFrom("mzR", "peaks", "close", "openMSfile", "header")
 importFrom("lattice", "levelplot", "panel.rect", "panel.levelplot")
 importFrom("plyr", "rbind.fill")
@@ -208,7 +208,8 @@ export(
     "adjustRtimePeakGroups",
     "plotAdjustedRtime",
     "plotChromatogram",
-    "highlightChromPeaks"
+    "highlightChromPeaks",
+    "plotChromPeakDensity"
 )
 
 ## New analysis methods
