@@ -1,0 +1,101 @@
+% Generated by roxygen2: do not edit by hand
+% Please edit documentation in R/functions-XCMSnExp.R
+\name{plotChromPeakDensity}
+\alias{plotChromPeakDensity}
+\title{Plot chromatographic peak density along the retention time axis}
+\usage{
+plotChromPeakDensity(object, mz, rt, param = PeakDensityParam(),
+  col = "#00000080", xlab = "retention time", ylab = "sample",
+  xlim = range(rt), ...)
+}
+\arguments{
+\item{object}{A \code{\link{XCMSnExp}} object with identified
+chromatographic peaks.}
+
+\item{mz}{\code{numeric(2)} defining an mz range for which the peak density
+should be plotted.}
+
+\item{rt}{\code{numeric(2)} defining an optional rt range for which the
+peak density should be plotted. Defaults to the absolute retention time
+range of \code{object}.}
+
+\item{param}{\code{\link{PeakDensityParam}} from which parameters for the
+\emph{peak density} correspondence algorithm can be extracted.}
+
+\item{col}{Color to be used for the individual samples. Length has to be 1
+or equal to the number of samples in \code{object}.}
+
+\item{xlab}{\code{character(1)} with the label for the x-axis.}
+
+\item{ylab}{\code{character(1)} with the label for the y-axis.}
+
+\item{xlim}{\code{numeric(2)} representing the limits for the x-axis.
+Defaults to the range of the \code{rt} parameter.}
+
+\item{...}{Additional parameters to be passed to the \code{plot} function.}
+}
+\value{
+The function is called for its side effect, i.e. to create a plot.
+}
+\description{
+Plot the density of chromatographic peaks along the retention
+    time axis and indicate which peaks would be grouped into the same feature
+    based using the \emph{peak density} correspondence method. Settings for
+    the \emph{peak density} method can be passed with an
+    \code{\link{PeakDensityParam}} object to parameter \code{param}.
+}
+\details{
+The \code{plotChromPeakDensity} function allows to evaluate
+    different settings for the \emph{peak density} on an mz slice of
+    interest (e.g. containing chromatographic peaks corresponding to a known
+    metabolite).
+    The plot shows the individual peaks that were detected within the
+    specified \code{mz} slice at their retention time (x-axis) and sample in
+    which they were detected (y-axis). The density function is plotted as a
+    black line. Parameters for the \code{density} function are taken from the
+    \code{param} object. Grey rectangles indicate which chromatographic peaks
+    would be grouped into a feature by the \emph{peak density} correspondence
+    method. Parameters for the algorithm are also taken from \code{param}.
+    See \code{\link{groupChromPeaks-density}} for more information about the
+    algorithm and its supported settings.
+}
+\examples{
+
+## Below we perform first a peak detection (using the centWave
+## method) on some of the test files from the faahKO package.
+library(faahKO)
+library(xcms)
+fls <- dir(system.file("cdf/KO", package = "faahKO"), recursive = TRUE,
+           full.names = TRUE)
+
+## Reading 2 of the KO samples
+raw_data <- readMSData2(fls[1:2])
+
+## Perform the peak detection using the centWave method.
+res <- findChromPeaks(raw_data, param = CentWaveParam(noise = 1000))
+
+## Align the samples using obiwarp
+res <- adjustRtime(res, param = ObiwarpParam())
+
+## Plot the chromatographic peak density for a specific mz range to evaluate
+## different peak density correspondence settings.
+mzr <- c(305.05, 305.15)
+
+plotChromPeakDensity(res, mz = mzr, param = PeakDensityParam(), pch = 16)
+
+## Use a larger bandwidth
+plotChromPeakDensity(res, mz = mzr, param = PeakDensityParam(bw = 60),
+    pch = 16)
+## Neighboring peaks are now fused into one.
+
+## Require the chromatographic peak to be present in all samples of a group
+plotChromPeakDensity(res, mz = mzr, pch = 16,
+    param = PeakDensityParam(minFraction = 1))
+}
+\seealso{
+\code{\link{groupChromPeaks-density}} for details on the
+    \emph{peak density} correspondence method and supported settings.
+}
+\author{
+Johannes Rainer
+}
