@@ -3,6 +3,7 @@ CHANGES IN VERSION 1.51.12
 
 NEW FEATURES:
 - plotChromatogram and highlightChromPeaks functions.
+- plotChromPeakDensity function.
 - clean method for Chromatogram classes.
 
 USER VISIBLE CHANGES:
